Fix additional issues on nav header - alignment

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,13 +5,17 @@
   font-family: "Kaushan Script Regular";
   src: url(/assets/fonts/KaushanScript-Regular.ttf);
 }
-
+html {
+  width: 100%;
+  display: block;
+}
 body {
   // padding-top: 12rem;
   // overflow: hidden;
   height: 100%;
   width: 100%;
   background-image: linear-gradient(#000, #9d2701, #000);
+  display: block;
 }
 
 body > .container {
@@ -117,6 +121,12 @@ body > .container {
   transform: scaleX(1);
 }
 
+.navbar-expand-md>.container {
+  margin: unset;
+  width: 100%;
+  max-width: unset;
+}
+
 @media screen and (min-width: 768px) {
   .navmenu_item > a:before {
     // display: block;
@@ -151,7 +161,7 @@ body > .container {
 }
 
 .home__section {
-  position: absolute;
+  position: relative;
   // background-color: #61ac27;
   width: 100%;
   height: 100%;
@@ -171,7 +181,7 @@ body > .container {
     margin: 0 auto;
 }
 
-@media screen and (min-width: 322px) {
+@media screen and (min-width: 222px) {
   .ThaiNako_logo {
       margin: unset;
   }
